# panoptes

./: .gitignore  CMakeLists.txt  COPYING  LICENSE.zlib  README  README.md  README.mediawiki
docs/: Atomics.md  ExtendedPrecision.md  Prefetch.md  Threading.md
src/: .gitignore  CMakeLists.txt  Makefile  backtrace.cpp  backtrace.h  callout.cpp  callout.h  compress.h  context.cpp  context.h  context_internal.cpp  context_internal.h  context_memcheck.cpp  context_memcheck.h  context_memcheck_internal.cpp  context_memcheck_internal.h  fat_binary.h  global_context.cpp  global_context.h  global_context_memcheck.cpp  global_context_memcheck.h  global_memcheck_state.cpp  global_memcheck_state.h  gpu_pool.h  host_gpu_vector.h  interposer.cpp  logger.cpp  logger.h  metadata.cpp  metadata.h  ptx_formatter.cpp  ptx_formatter.h  ptx_grammar.yy  ptx_ir.cpp  ptx_ir.h  ptx_lex.ll  ptx_lexer.cpp  ptx_parser.cpp  ptx_parser_state.cpp  ptx_parser_state.h  (+2 more)
src/include/panoptes/: panoptes.h
src/launcher/: .gitignore  CMakeLists.txt  launcher.c
src/panoptes/: .gitignore  CMakeLists.txt  backtrace.cpp  callout.cpp  callout.h  compress.cpp  context.cpp  context.h  context_internal.cpp  context_internal.h  context_memcheck.cpp  context_memcheck.h  context_memcheck_internal.cpp  context_memcheck_internal.h  cuda_context.cpp  cuda_context.h  fat_binary.cpp  fat_binary.h  global_context.cpp  global_context.h  global_context_memcheck.cpp  global_context_memcheck.h  global_cuda_context.cpp  global_cuda_context.h  global_memcheck_state.cpp  global_memcheck_state.h  gpu_pool.h  gpu_stack.h  gpu_vector.h  host_gpu_vector.h  initializer.h  interposer.cpp  interposer.h  logger.cpp  metadata.cpp  ptx_formatter.cpp  ptx_formatter.h  ptx_grammar.h  ptx_ir.cpp  ptx_ir.h  (+10 more)
src/panoptes/memcheck/: context_memcheck.cpp  context_memcheck.h  context_memcheck_internal.cpp  context_memcheck_internal.h  global_context_memcheck.cpp  global_context_memcheck.h  global_memcheck_context.cpp  global_memcheck_context.h  global_memcheck_state.cpp  global_memcheck_state.h  memcheck_context.cpp  memcheck_context.h  memcheck_context_internal.cpp  memcheck_context_internal.h  metadata.cpp  metadata.h
src/ptx_io/: .gitignore  CMakeLists.txt  ptx_formatter.cpp  ptx_formatter.h  ptx_grammar.h  ptx_grammar.yy  ptx_ir.cpp  ptx_ir.h  ptx_lex.ll  ptx_lexer.cpp  ptx_lexer.h  ptx_parser.cpp  ptx_parser.h  ptx_parser_state.cpp  ptx_parser_state.h
src/tests/: .gitignore  CMakeLists.txt  Makefile  atest_multidimensional_parameters  atest_negative_offsets  k_atomic_kernels.cu  launcher  scoped_allocations.h  test_bindtexture.cu  test_bindtexturetoarray.cu  test_eventdestroy.cu  test_eventelapsedtime.cu  test_eventquery.cpp  test_eventquery.cu  test_eventrecord.cu  test_eventsynchronize.cu  test_funcgetattributes.cpp  test_funcgetattributes.cu  test_getdeviceproperties.cpp  test_getdeviceproperties.cu  test_gettexturereference.cu  test_hostgetdevicepointer.cpp  test_hostgetdevicepointer.cu  test_hostgetflags.cu  test_k_assert.cu  test_memcpy.cpp  test_memcpy.cu  test_memcpyfromsymbol.cu  test_memcpytosymbol.cu  test_registervar.cpp  test_setupargument.cpp  test_streamdestroy.cpp  test_streamdestroy.cu  test_streamquery.cpp  test_streamquery.cu  test_streamsynchronize.cpp  test_streamsynchronize.cu  test_streamwaitevent.cpp  test_streamwaitevent.cu  valgrind.suppressions  (+130 more)
src/tests/generic/: .gitignore  CMakeLists.txt  test_choosedevice.cpp  vtest_choosedevice.cpp
src/tests/ptx_io/: .gitignore  CMakeLists.txt  test_negativecompilation.cpp  test_parser.cpp  test_utilities.cpp  test_utilities.h
src/tests/sm_10/: .gitignore  CMakeLists.txt  fixture_bindtexture2d.h  test_bindtexture.cu  test_bindtexture2d.cu  test_bindtexturetoarray.cu  test_eventdestroy.cpp  test_eventelapsedtime.cpp  test_eventrecord.cpp  test_eventsynchronize.cpp  test_funcgetattributes.cpp  test_hostgetflags.cpp  test_memcpy.cpp  test_memcpytosymbol.cu  test_registervar.cpp  test_setupargument.cpp  test_streamdestroy.cpp  test_streamquery.cpp  vtest_bindtexture.cu  vtest_bindtexture2d.cu  vtest_bindtexturetoarray.cu  vtest_devicereset.cu  vtest_devicesynchronize.cpp  vtest_eventquery.cpp  vtest_eventrecord.cpp  vtest_eventsynchronize.cpp  vtest_funcsetcacheconfig.cpp  vtest_getdeviceproperties.cpp  vtest_geterrorstring.cpp  vtest_getsymboladdress.cu  vtest_gettexturealignmentoffset.cu  vtest_gettexturereference.cu  vtest_hooks.cpp  vtest_hostalloc.cpp  vtest_hostgetflags.cpp  vtest_hostregister.cpp  vtest_hostunregister.cpp  vtest_k_array.cu  vtest_k_envreg.cu  vtest_k_funcgetattributes.cu  (+32 more)
src/tests/sm_11/: .gitignore  CMakeLists.txt  vtest_k_brkpt.cu
src/tests/sm_12/: .gitignore  CMakeLists.txt  k_atomic_kernels.cu  vtest_k_atomic_global.cpp  vtest_k_atomic_shared.cpp
src/tests/sm_13/: .gitignore  CMakeLists.txt
src/tests/sm_20/: .gitignore  CMakeLists.txt  common.h  k_atomic_kernels_generic.cu  test_k_assert.cu  vtest_k_atomic_generic.cpp  vtest_k_atomic_generic.h  vtest_k_bfind.cu  vtest_k_blas.cu  vtest_k_brev.cu  vtest_k_carry.cu  vtest_k_clz.cu  vtest_k_fma.cu  vtest_k_irregular.cu  vtest_k_isspacep.cu  vtest_k_mad.cu  vtest_k_mulhi.cu  vtest_k_pmevent.cu  vtest_k_printf.cu  vtest_k_rsqrt.cu  vtest_k_tex1d_sm20.cu  vtest_k_tld4.cu  vtest_k_uniform.cu  vtest_k_vote.cu
