SET(COMPILE_DEFINITIONS CUDA_MAJOR=${CUDA_VERSION_MAJOR};CUDA_MINOR=${CUDA_VERSION_MINOR})

FILE(GLOB libpanoptes_SOURCES *.c *.cpp memcheck/*.cpp)

ADD_LIBRARY(panoptes SHARED ${libpanoptes_SOURCES})
ADD_DEPENDENCIES(panoptes ptx_io)
TARGET_LINK_LIBRARIES(panoptes ${CUDA_LIBRARIES} boost_thread ptx_io)
