SET(COMPILE_DEFINITIONS CUDA_MAJOR=${CUDA_VERSION_MAJOR};CUDA_MINOR=${CUDA_VERSION_MINOR})

FILE(GLOB libpanoptes_SOURCES *.c *.cpp memcheck/*.cpp)

# Set visibility appropriately
SET(BACKEND_SOURCES ${libpanoptes_SOURCES})
GET_FILENAME_COMPONENT(INTERPOSER_SOURCE "interposer.cpp" ABSOLUTE)
SET_SOURCE_FILES_PROPERTIES(${INTERPOSER_SOURCE} PROPERTIES COMPILE_FLAGS "-fvisibility=default")
LIST(REMOVE_ITEM BACKEND_SOURCES "${INTERPOSER_SOURCE}")
SET_SOURCE_FILES_PROPERTIES(${BACKEND_SOURCES} PROPERTIES COMPILE_FLAGS "-fvisibility=hidden")

ADD_LIBRARY(panoptes SHARED ${libpanoptes_SOURCES})
ADD_DEPENDENCIES(panoptes ptx_io)
TARGET_LINK_LIBRARIES(panoptes ${CUDA_LIBRARIES} boost_thread ptx_io)
